php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #16414 Unable to compile the fribidi extension
Submitted: 2002-04-03 12:54 UTC Modified: 2002-09-15 05:44 UTC
Votes:1
Avg. Score:4.0 ± 0.0
Reproduced:1 of 1 (100.0%)
Same Version:0 (0.0%)
Same OS:0 (0.0%)
From: sagi at boom dot org dot il Assigned:
Status: Closed Package: Compile Failure
PHP Version: 4.1.2 OS: Linux (RedHat 7.2)
Private report: No CVE-ID: None
 [2002-04-03 12:54 UTC] sagi at boom dot org dot il
When trying to compile PHP with --with-fribidi:
[sagi@domino php-4.2.0RC1]$ make
Making all in Zend
make[1]: Entering directory `/usr/local/src/php-4.2.0RC1/Zend'
make[1]: Nothing to be done for `all'.
make[1]: Leaving directory `/usr/local/src/php-4.2.0RC1/Zend'
Making all in main
make[1]: Entering directory `/usr/local/src/php-4.2.0RC1/main'
make[2]: Entering directory `/usr/local/src/php-4.2.0RC1/main'
gcc -I. -I/usr/local/src/php-4.2.0RC1/main -I/usr/local/src/php-4.2.0RC1/main -I/usr/local/src/php-4.2.0RC1 -I/usr/local/src/php-4.2.0RC1/Zend -I/usr/local/include/fribidi/ -I/usr/lib/glib/include/ -I/usr/include/freetype2/freetype -I/usr/include/mysql -I/usr/include/pspell -I/usr/local/src/php-4.2.0RC1/ext/xml/expat  -I/usr/local/src/php-4.2.0RC1/TSRM -g -O2  -c internal_functions.c && touch internal_functions.lo
In file included from internal_functions.c:36:
/usr/local/src/php-4.2.0RC1/ext/fribidi/php_fribidi.h:32: parse error before `guint16'
/usr/local/src/php-4.2.0RC1/ext/fribidi/php_fribidi.h:32: warning: no semicolon at end of struct or union
/usr/local/src/php-4.2.0RC1/ext/fribidi/php_fribidi.h:33: warning: data definition has no type or storage class
/usr/local/src/php-4.2.0RC1/ext/fribidi/php_fribidi.h:34: parse error before `*'
/usr/local/src/php-4.2.0RC1/ext/fribidi/php_fribidi.h:34: warning: data definition has no type or storage class
/usr/local/src/php-4.2.0RC1/ext/fribidi/php_fribidi.h:35: parse error before `*'
/usr/local/src/php-4.2.0RC1/ext/fribidi/php_fribidi.h:35: warning: data definition has no type or storage class
/usr/local/src/php-4.2.0RC1/ext/fribidi/php_fribidi.h:36: parse error before `}'
/usr/local/src/php-4.2.0RC1/ext/fribidi/php_fribidi.h:36: warning: data definition has no type or storage class
make[2]: *** [internal_functions.lo] Error 1
make[2]: Leaving directory `/usr/local/src/php-4.2.0RC1/main'
make[1]: *** [all-recursive] Error 1
make[1]: Leaving directory `/usr/local/src/php-4.2.0RC1/main'
make: *** [all-recursive] Error 1
[sagi@domino php-4.2.0RC1]$ 

Same thing happens with PHP4.1.2.

FriBidi version: 0.10.1
GLIB version: 1.2.10

Sagi

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2002-04-03 14:49 UTC] sagi at boom dot org dot il
Just checked with 4.2.0RC2, the problem still exists.
 [2002-06-17 21:36 UTC] sniper@php.net
I can't reproduce this..can you please try
this snapshot:

http://snaps.php.net/php4-latest.tar.gz

As I think this was the same problem as the one
with mysql we had..

 [2002-07-18 01:00 UTC] php-bugs at lists dot php dot net
No feedback was provided for this bug for over a month, so it is
being suspended automatically. If you are able to provide the
information that was originally requested, please do so and change
the status of the bug back to "Open".
 [2002-09-15 05:44 UTC] tal@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Mon Sep 21 15:00:01 2026 UTC