Changed version from NO_VERSION_YET to 0.1 @ - Fixed compilation errors when compiling with the fribidi extension (Bug #16414) (Tal)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@96365 c90b9560-bf6c-de11-be94-00142212c4b1